--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="w-full max-w-md bg-white rounded-xl shadow-lg p-6 animate-fade-in">
     <h1 class="text-2xl font-light text-gray-800 text-center mb-6">Trip Expense Splitter</h1>
 
+    <!-- Add Person -->
     <div class="mb-6">
       <h2 class="text-lg font-medium text-gray-700 mb-3">Add Person</h2>
       <div class="flex space-x-2">
@@ -40,8 +41,10 @@
       </div>
     </div>
 
+    <!-- People List -->
     <div id="peopleList" class="mb-6"></div>
 
+    <!-- Add Expense -->
     <div class="mb-6">
       <h2 class="text-lg font-medium text-gray-700 mb-3">Add Expense</h2>
       <select id="expensePerson" class="w-full p-3 border border-gray-200 rounded-lg mb-3 focus:outline-none focus:ring-2 focus:ring-green-300 transition">
@@ -52,20 +55,26 @@
       <button onclick="addExpense()" class="btn w-full bg-green-500 text-white p-3 rounded-lg hover:bg-green-600">Add Expense</button>
     </div>
 
-    <div id="expensesList" class="mb-6"></div>
+    <!-- Exportable Area -->
+    <div id="exportArea" class="bg-white rounded-xl shadow-md p-6 space-y-6">
+      <!-- Expenses List -->
+      <div id="expensesList" class="mb-6"></div>
 
-    <div id="summary" class="mb-6">
-      <h2 class="text-lg font-medium text-gray-700 mb-3">Summary</h2>
-      <p class="text-gray-600">Total Spent: ₹<span id="totalSpent">0</span></p>
-      <p class="text-gray-600">Per Person: ₹<span id="perPerson">0</span></p>
-    </div>
-
-    <div id="settlements" class="mb-6">
-      <div class="flex justify-between items-center mb-3">
-        <h2 class="text-lg font-medium text-gray-700">Settlements</h2>
-        <button onclick="exportSettlements()" class="btn bg-purple-500 text-white p-2 rounded-lg hover:bg-purple-600">Export as Image</button>
+      <!-- Summary -->
+      <div id="summary" class="mb-6">
+        <h2 class="text-lg font-medium text-gray-700 mb-3">Summary</h2>
+        <p class="text-gray-600">Total Spent: ₹<span id="totalSpent">0</span></p>
+        <p class="text-gray-600">Per Person: ₹<span id="perPerson">0</span></p>
       </div>
-      <div id="settlementsList" class="bg-gray-50 p-4 rounded-lg"></div>
+
+      <!-- Settlements -->
+      <div id="settlements" class="mb-6">
+        <div class="flex justify-between items-center mb-3">
+          <h2 class="text-lg font-medium text-gray-700">Settlements</h2>
+          <button id="exportBtn" onclick="exportSettlements()" class="btn bg-purple-500 text-white p-2 rounded-lg hover:bg-purple-600">Export as Image</button>
+        </div>
+        <div id="settlementsList" class="bg-gray-50 p-4 rounded-lg"></div>
+      </div>
     </div>
   </div>
 
@@ -127,8 +136,6 @@
         document.getElementById('expenseNote').value = '';
         updateExpensesList();
         calculateSummary();
-        // Do not clear the selected person
-        // Keep dropdown as-is
       }
     }
 
@@ -196,12 +203,20 @@
     }
 
     function exportSettlements() {
-      const settlementsDiv = document.getElementById('settlements');
-      html2canvas(settlementsDiv, { backgroundColor: '#f9fafb' }).then(canvas => {
+      const exportArea = document.getElementById('exportArea');
+      const exportBtn = document.getElementById('exportBtn');
+      
+      // Hide button before capture
+      exportBtn.style.display = 'none';
+
+      html2canvas(exportArea, { backgroundColor: '#f9fafb' }).then(canvas => {
         const link = document.createElement('a');
         link.download = 'settlements.png';
         link.href = canvas.toDataURL('image/png');
         link.click();
+
+        // Show button back
+        exportBtn.style.display = 'inline-block';
       });
     }
   </script>
